// Copyright 2022 The Android Open Source Project
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package netsim.model;

// A 3D position. A valid Position must have both x and y coordinates.
// The position coordinates are in meters.
message Position {
  float x = 1;
  float y = 2;
  float z = 3;
}

message Orientation {
  float yaw = 1;
  float pitch = 2;
  float roll = 3;
}

// A radio physical layer
enum PhyKind {
  NONE = 0;
  BLUETOOTH_CLASSIC = 1;
  BLUETOOTH_LOW_ENERGY = 2;
  WIFI = 3;
  UWB = 4;
  WIFI_RTT = 5;
}

// The state of the physical layer
enum PhyState {
  option allow_alias = true;
  UNKNOWN = 0;
  ON = 1;
  UP = 1;
  OFF = 2;
  DOWN = 2;
}

// The phy layer and state in a chip
//
// A device can have multiple chips of the same kind
// (like UWB) and each chip can provide multiple phys
// (like Bluetooth)
message ChipPhyState {
  PhyKind radio = 1;
  PhyState state = 2;
  // TODO: add ChipKind and id
}

message ChipPhyRange {
  PhyKind radio = 1;
  float range = 2;
  // TODO: add owning ChipKind and id
}

message Device {
  string device_serial = 1;  // unique device serial number
  string name = 2;           // user settable unique alias
  bool visible = 3;
  Position position = 4;
  Orientation orientation = 5;
  repeated ChipPhyState radio_states = 6;
  repeated ChipPhyRange radio_ranges = 7;
}

message Scene {
  repeated Device devices = 1;
}
